2013-06-28  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/migrate.sql
	  include/functions_crm.php
	  include/functions_user.php
	  include/ajax/crm.php
	  operation/companies/company_role.php
	  operation/companies/company_detail.php
	  operation/leads/template_manager.php: Added ACLs
	to CRM.

2013-06-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/ajax/crm.php: Deleted 'contracts' and
	'leads' fields.

2013-06-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/companies/company_detail.php: Fixed bug
	updating company.

2013-06-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php
	  operation/companies/company_detail.php: Added company
	parent search window.

	* include/ajax/crm.php
	  include/js/integria_crm.js: Added files.


2013-06-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/migrate.sql
	  operation/companies/company_detail.php
	  include/styles/integria.css: Added fields in edit
	and search forms.

	* include/functions_crm.php: Added file.

	* operation/leads/lead_activity.php
	  operation/leads/lead_detail.php
	  operation/leads/lead_mail.php: Added several
	improvements in leads.

2013-06-25  Dario Rodriguez <dario@artica.es>

	* godmode/usuarios/configurar_usuarios.php: Removed email validation,
	this field is optional.

2013-06-25  Dario Rodriguez <dario@artica.es>
	
	* operation/incidents_simple/incidents.php: Fixed email notify flag
	on incident creation.

2013-06-24  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php,
	include/js/integria_incident_search.js,
	include/ajax/users.php: Added support to get default value for
	notify email field from "forced_email" field of group configuration,
	also changes the user change group combo.

2013-06-24  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php: Notify email checkbox and
	additional emails split in two fields